Add MetaSpace to capture documentation, origins...
# Conflicts:
#	key.core/src/main/java/de/uka/ilkd/key/java/Recoder2KeYConverter.java
#	key.core/src/main/java/de/uka/ilkd/key/proof/init/ProblemInitializer.java
#	key.core/src/main/java/de/uka/ilkd/key/util/ExceptionTools.java
#	key.ui/src/main/resources/de/uka/ilkd/key/gui/help/functionExplanations.xml